--- a/FlightLine.App/package.json
+++ b/FlightLine.App/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser-dynamic": "^15.1.5",
     "@angular/router": "^15.1.5",
     "@material/density": "^15.0.0-canary.684e33d25.0",
+    "@ngx-progressbar/core": "^5.3.2",
     "animate.css": "^4.1.1",
-    "ngx-progressbar": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
